열쇠 조건, 사망 조건 추가, 클래스 구현

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "python.analysis.extraPaths": [
         "./Adventure",
         "./Adventure",
+        "./Adventure",
         "./Adventure"
     ]
 }
